Fix text alignment

--- a/src/app/components/osselectfield.scss
+++ b/src/app/components/osselectfield.scss
@@ -1,3 +1,5 @@
 .ukOSSelectField {
   margin-left: 16px;
+  flex: 0 1 auto;
+  align-self: center;
 }
