--- a/src/app/components/tip.scss
+++ b/src/app/components/tip.scss
@@ -1,3 +1,5 @@
 .ukTip {
-  margin-left: 30px;
+  margin-left: 48px;
+  flex: 1 1 auto;
+  align-self: center;
 }
