--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -19,6 +19,8 @@ html, body {
 
 .ukTextField {
   margin-left: 16px;
+  flex: 0 1 auto;
+  align-self: center;
 }
 
 .ukAdvancedButton {
